Creates ReflectionUtils to access private members. Fixes a lot of issues due to 1.7.2 port.