@@ -1,12 +1,16 @@
 package net.mcft.copy.betterstorage.tile;
 
+import java.util.BitSet;
+
 import net.mcft.copy.betterstorage.BetterStorage;
 import net.mcft.copy.betterstorage.misc.Constants;
 import net.mcft.copy.betterstorage.utils.MiscUtils;
+import net.mcft.copy.betterstorage.utils.ReflectionUtils;
 import net.minecraft.block.Block;
 import net.minecraft.block.material.Material;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemBlock;
+import cpw.mods.fml.common.registry.FMLControlledNamespacedRegistry;
 import cpw.mods.fml.common.registry.GameData;
 import cpw.mods.fml.common.registry.GameRegistry;
 
@@ -20,7 +24,7 @@ public class TileBetterStorage extends Block {
 		
 		setCreativeTab(BetterStorage.creativeTab);
 		
-		setBlockName(getTileName());
+		setBlockName(Constants.modId + "." + getTileName());
 		registerBlock();
 		
 	}
@@ -40,11 +44,13 @@ public class TileBetterStorage extends Block {
 		if (ItemBlock.class.isAssignableFrom(itemClass)) {
 			GameRegistry.registerBlock(this, (Class<? extends ItemBlock>)itemClass, getTileName(), Constants.modId);
 		} else {
+			GameData mainData = (GameData)ReflectionUtils.get(GameData.class, null, "mainData");
 			Block block = GameRegistry.registerBlock(this, null, getTileName(), Constants.modId);
 			Item item;
-			try { item = itemClass.getConstructor(int.class).newInstance(); }
+			try { item = itemClass.getConstructor().newInstance(); }
 			catch (Exception e) { throw new RuntimeException(e); }
-			GameData.itemRegistry.add(Block.getIdFromBlock(block), getTileName(), item);
+			//FIXME: This doesn't work. The client fails to remap the ids. Possible fixes: a) make ItemBackpack extend ItemBlock or b) individually register ItemBackpack
+			ReflectionUtils.invoke(FMLControlledNamespacedRegistry.class, GameData.itemRegistry, "add", new Class[]{int.class, String.class, Object.class, BitSet.class}, new Object[]{Block.getIdFromBlock(block), getTileName(), item, new BitSet()});	
 		}
 	}
 	
